feat: new pages

--- a/lab_030.html
+++ b/lab_030.html
@@ -94,6 +94,8 @@
         color of <code class="language-html">&lt;h1&gt;</code> headings with the <code>id="main-title"</code>.
       </p>
       <pre data-range="21,30" data-src="prism/css/3001.css"></pre>
+      <p class="note"><strong>Note:</strong>Make sure the HTML selector comes first and there is no space between the HTML
+      selector and the class or ID in order to use it in this way.</p>
       <h2>Attribute Selectors</h2>
       <p>This is an advanced selector that that we'll use to style <code class="language-html">&lt;input&gt;</code>
         tags. <em>Attribute selectors</em> (<strong>[]</strong>) select an element based on any attributes attached to its HTML
