--- a/lab_031.html
+++ b/lab_031.html
@@ -43,26 +43,37 @@
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about pseudo classes and pseudo elements in CSS</li>
+        <li>Learn about pseudo classes in CSS</li>
       </ul>
       <h2>Pseudo Classes</h2>
       <p><em>Pseudo classes</em> are an extra add-on to CSS selectors that make selections
-        that much more specific. They target an element's state or interaction.
-        The ones we will talk about are <code class="language-css">link</code>,
+        that much more specific. They target an element's <strong>state</strong> or <strong>interaction</strong>. For
+        example, if we want a different style for when someone hovers over a button or after a link
+        has been pressed.</p>
+      <p> The ones we will talk about are <code class="language-css">link</code>,
         <code class="language-css">visited</code>, <code class="language-css">active</code>,
         <code class="language-css">hover</code>, and <code class="language-css">focus</code>.
       </p>
-      <p>The pseudo classes below target <em>unvisited</em> and <em>visited</em> links respectively. The styles will
-        apply depending on whether the user has visited the page before.</p>
+      <p>The pseudo classes, <code class="language-css">link</code> and
+        <code class="language-css">visited</code>, below target <em>unvisited</em> and <em>visited</em> links
+        respectively. The styles will apply depending on whether the user has visited the page before.
+      </p>
       <pre data-range="1,8" data-src="prism/css/3101.css"></pre>
-      <p>The following pseudo classes handle interactions with link.</p>
+      <p>The following pseudo classes are <em>dynamic</em> pseudo classes. They are applied when something happens
+        or for a specific kind of interaction.</p>
       <ul>
-        <li><strong>Active</strong> handles the user activating, or clicking on, something e.g. the link.</li>
-        <li><strong>Hover</strong> handles user input moving over the element e.g. a mouse hovering over a link</li>
-        <li><strong>Focus</strong> handles when something is selected by, or is ready for, keyboard input</li>
+        <li><code class="language-css">active</code> handles the user activating, or clicking on, something e.g. the
+          link.</li>
+        <li><code class="language-css">hover</code> handles user input moving over the element e.g. a mouse hovering
+          over a link</li>
+        <li><code class="language-css">focus</code> handles when something is selected by, or is ready for, keyboard
+          input</li>
       </ul>
-
       <pre data-range="10, 21" data-src="prism/css/3101.css"></pre>
+      <p class="note"><strong>Note:</strong> <code class="language-css">focus</code> is most often used for <strong>form
+          elements</strong> such as <code class="language-html">&lt;input&gt;</code> or <code
+          class="language-html">&lt;textarea&gt;</code>, however they can also be used on links for increased
+        accessibility! Some visitors may be using a keyboard to navigate the website.</p>
 
     </div>
   </main>
