--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     this Starter Pack to be eligible.</p>
 
   <ul>
-    <li><a href="" target="_blank" rel="noopener">Schedule an Interview</a></li>
+    <li><a href="https://docs.google.com/spreadsheets/d/1CnYXGcngyuptP6q5Golt3a9J0d7Z4Y352XyIY2essWo/edit?usp=sharing" target="_blank" rel="noopener">Schedule an Interview</a></li>
     <li><a href="https://github.com/hack4impact-calpoly/starter-pack/discussions" target="_blank"
         rel="noopener">Starter Pack Discussions</a></li>
     <!--   <li><a href="https://github.com/edgecase/git_immersion/issues" target="_blank" rel="noopener">Report an Issue</a> -->
