feat: added issue report link

--- a/lab_033.html
+++ b/lab_033.html
@@ -57,7 +57,9 @@
       is decided by <strong>specificity</strong>. You are unlikely to have a situation where you select the same element twice,
       however conflicts with <em>nested elements</em> are more likely to occur:</p>
       <pre data-range="9, 15" data-src="prism/css/3301.css"></pre>
-      
+     <p>Since the rule for the  <code class="language-html">&lt;p&gt;</code> blue text color comes last, it may seem as though 
+        that will be the rule that is applied, <em>however</em> that is not the case. The <code>div p</code> rule is more 
+        <strong>specific</strong> so it is given <strong>more importance</strong>.</p> 
       
 
 
