--- a/lab_029.html
+++ b/lab_029.html
@@ -75,9 +75,15 @@
       <p>We'll provide you with what our stylesheet is as well as a stylesheet of just the necessary requirements.
         If you just follow our stylings and keep everything the same, you'll get a very specific looking website so
         we encourage you to take only the necessary stylesheet and make it your own!</p>
-      <p class="note"><strong>Note:</strong> If you need any help or if there is some style you are trying to achieve, but
-      are unable to then we <em>strongly</em> suggest you use GitHub Discussions to ask questions. We are here to help you!</p>
-
+      <p class="note"><strong>Note:</strong> If you need any help or if there is some style you are trying to achieve,
+        but are unable to then we <em>strongly</em> suggest you use GitHub Discussions to ask questions. We are here to
+        help you!</p>
+      <h2>Style Sheets</h2>
+      <p>You are welcome to download both and try them out! Just put them in your directory and change the reference in
+        your <code class="language-html">&lt;head&gt;</code> to the correct file.</p>
+      <a href="css/styles.css" download>Download full style sheet</a>
+      <br>
+      <a href="css/styles.min.css" download>Download only the necessary styles</a>
 
 
     </div>
