fix: labs 29-31 typo fixes

--- a/lab_029.html
+++ b/lab_029.html
@@ -51,7 +51,7 @@
         visual appearance of a website. You might see some websites and developers using tools which mix HTML and CSS,
         however we <em>strongly</em> recommend that you keep them separate.
       </p>
-      <p>Remember, HTML is for content and CSS if for appearance. They both have their jobs and its your job as a
+      <p>Remember, HTML is for content and CSS is for appearance. They both have their jobs and it's your job as a
         developer to use them properly! With that said, let's learn about how to apply CSS to HTML.</p>
       <h2>Applying CSS</h2>
       <p>There are three ways to apply CSS to HTML: <strong>inline</strong>, <strong>internal</strong>, and
@@ -72,11 +72,11 @@
       <p>CSS is very flexible and very powerful. Instead of describing everything you need to do like
         with HTML, we'll go over the most important CSS concepts and <strong>leave the rest of the styling up to
           you</strong>.</p>
-      <p>We'll provide you with what our stylesheet is as well as a stylesheet of just the necessary requirements.
-        If you just follow our stylings and keep everything the same, you'll get a very specific looking website so
+      <p>We'll provide you with our stylesheet as well as a stylesheet of just the necessary requirements.
+        If you just follow our stylings and keep everything the same, you'll get a very specific looking website, so
         we encourage you to take only the necessary stylesheet and make it your own!</p>
       <p class="note"><strong>Note:</strong> If you need any help or if there is some style you are trying to achieve, but
-      are unable to then we <em>strongly</em> suggest you use GitHub Discussions to ask questions. We are here to help you!</p>
+      are unable to, then we <em>strongly</em> suggest you use GitHub Discussions to ask questions. We are here to help you!</p>
 
 
 
