--- a/lab_030.html
+++ b/lab_030.html
@@ -60,7 +60,7 @@
         if a property applies to a tag, the best choice is to just try it. The nice thing about CSS being all about
         appearance is that you can apply a property and refresh your webpage to see if it works!
       </p>
-      <p>Worse comes to worse, you can use the references here: <a
+      <p>Worse comes to worst, you can use the references here: <a
           href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">https://developer.mozilla.org/en-US/docs/Web/CSS/Reference</a>
         to browse the entire list of every single CSS property and more.</p>
       <p class="note"><strong>Note:</strong> As always, during this Starter Pack, GitHub Discussions is open for you
@@ -73,7 +73,7 @@
         <code class="language-html">&lt;body&gt;</code> tag to be 14px.
       </p>
       <p>Anything that is an HTML tag can be a CSS HTML selector. The style will apply to all
-        HTML elements that are selected. For example if you have the following:</p>
+        HTML elements that are selected. For example, if you have the following:</p>
       <pre data-range="5,9" data-src="prism/css/3001.css"></pre>
       <p>This will make all <code class="language-html">&lt;p&gt;</code> elements in your HTML have the same
         styling. All paragraphs will be <code class="language-css">sans-serif</code>,
@@ -81,7 +81,7 @@
       </p>
       <h2>Class and ID Selectors</h2>
       <p>When we were coding our HTML, we added <code>classes=""</code> as attributes to various HTML tags.
-        The reason we did this is so that we could group specific elements together. Now when we are coding our
+        The reason we did this was so that we could group specific elements together. Now when we are coding our
         CSS, we can apply styles specifically to elements with specific classses.</p>
       <p><em>Class selectors</em> are a period followed by the class name. ID selectors are a hashmark or pound symbol
         followed by the ID name.</p>
@@ -94,7 +94,7 @@
         color of <code class="language-html">&lt;h1&gt;</code> headings with the <code>id="main-title"</code>.
       </p>
       <pre data-range="21,30" data-src="prism/css/3001.css"></pre>
-      <p class="note"><strong>Note:</strong>Make sure the HTML selector comes first and there is no space between the HTML
+      <p class="note"><strong>Note: </strong>Make sure the HTML selector comes first and that there is no space between the HTML
       selector and the class or ID in order to use it in this way.</p>
       <h2>Attribute Selectors</h2>
       <p>This is an advanced selector that that we'll use to style <code class="language-html">&lt;input&gt;</code>
@@ -108,7 +108,7 @@
       <pre data-range="9,28" data-src="prism/html/3001.html"></pre>
       <p>You can use the following CSS to only draw a border around the position names and not the nested list. The
         position names are <thead>
-          direct children of the unordered list with the <code>id="positions-list"</code></p>
+          direct children of the unordered list with the <code>id="positions-list"</code>.</p>
       <pre data-range="51,55" data-src="prism/css/3001.css"></pre>
       <h2>Adjacent Selectors</h2>
       <p><em>Adjacent selectors</em> (<strong>+</strong>) select elements that are directly after another element. For example:
