--- a/lab_031.html
+++ b/lab_031.html
@@ -54,8 +54,8 @@
         <code class="language-css">visited</code>, <code class="language-css">active</code>,
         <code class="language-css">hover</code>, and <code class="language-css">focus</code>.
       </p>
-      <p>The pseudo classes, <code class="language-css">link</code> and
-        <code class="language-css">visited</code>, below target <em>unvisited</em> and <em>visited</em> links
+      <p>The pseudo classes below, <code class="language-css">link</code> and
+        <code class="language-css">visited</code>, target <em>unvisited</em> and <em>visited</em> links
         respectively. The styles will apply depending on whether the user has visited the page before.
       </p>
       <pre data-range="1,8" data-src="prism/css/3101.css"></pre>
