fix: fix lab 33-34 grammar

--- a/lab_034.html
+++ b/lab_034.html
@@ -52,8 +52,8 @@
         <code class="language-css">blue</code>, <code class="language-css">silver</code>, <code
           class="language-css">transparent</code>, and more to reference colors.
       </p>
-      <p>CSS also accepts <strong>RGB</strong>, <strong>HSL</strong>, and <strong>hexadecimal</strong> colors as well.
-        If you've ever used a digital art program or Photoshop you probably know what these are, but if you don't here's
+      <p>CSS also accepts <strong>RGB</strong>, <strong>HSL</strong>, and <strong>hexadecimal</strong> colors.
+        If you've ever used a digital art program or Photoshop you probably know what these are, but if you haven't, here's
         a quick rundown.
       <p>
       <ul>
