--- a/lab_035.html
+++ b/lab_035.html
@@ -69,8 +69,8 @@
         classDef cluster rx:5px,ry:5px
       </pre>
       <p>The <code class="language-css">margin</code> is the space outside of the box. The <code
-          class="language-css">padding</code> is
-        the space inside the box. The <code class="language-css">border</code> marks the edge between them.</p>
+          class="language-css">padding</code> is the space inside the box. The <code class="language-css">border</code>
+        marks the edge between them.</p>
       <p class="note"><strong>Note:</strong> You don't have to use any of them, but a method for debugging HTML
         and CSS during web development is to set a border to a bright color to visually understand where the boxes
         lay on the webpage.</p>
@@ -79,6 +79,14 @@
       All edges of the margin and the padding can be set all together or individually. For example:</p>
       <pre data-range="1, 15" data-src="prism/css/3501.css"></pre>
       <h2>Borders</h2>
+      <p>Borders have a few more properties that control them. The simplest way to construct a border
+        is to set a <code class="language-css">border-style</code>. The values it can be are <code
+          class="language-css">solid</code>, <code class="language-css">dashed</code>, <code
+          class="language-css">dotted</code>, <code class="language-css">ridge</code>, <code
+          class="language-css">groove</code>, <code class="language-css">double</code>, <code
+          class="language-css">inset</code>, and <code class="language-css">outset</code>.
+      </p>
+
 
 
     </div>
