feat: more changes to labs

--- a/lab_035.html
+++ b/lab_035.html
@@ -80,14 +80,37 @@
       <pre data-range="1, 15" data-src="prism/css/3501.css"></pre>
       <h2>Borders</h2>
       <p>Borders have a few more properties that control them. The simplest way to construct a border
-        is to set a <code class="language-css">border-style</code>. The values it can be are <code
-          class="language-css">solid</code>, <code class="language-css">dashed</code>, <code
-          class="language-css">dotted</code>, <code class="language-css">ridge</code>, <code
-          class="language-css">groove</code>, <code class="language-css">double</code>, <code
-          class="language-css">inset</code>, and <code class="language-css">outset</code>.
+        is to set a <code class="language-css">border-style</code>. The values it can be are:
       </p>
-
-
+      <div class="border solid">
+        solid
+      </div>
+      <div class="border dashed">
+        dashed
+      </div>
+      <div class="border dotted">
+        dotted
+      </div>
+      <div class="border double">
+        double
+      </div>
+      <div class="border ridge">
+        ridge
+      </div>
+      <div class="border groove">
+        groove
+      </div>
+      <div class="border inset">
+        inset
+      </div>
+      <div class="border outset">
+        outset
+      </div>
+      <p>The <code class="language-css">border-color</code> changes the border color. The <code
+          class="language-css">border-width</code> property takes a pixel value and controls the width of the border.
+        The <code class="language-css">border-width</code> property can also be set individually with <code
+          class="language-css">border-top-width</code>, <code class="language-css">border-right-width</code>, <code
+          class="language-css">border-bottom-width</code>, and <code class="language-css">border-left-width</code>.</p>
 
     </div>
   </main>
