feat: more labs

--- a/lab_035.html
+++ b/lab_035.html
@@ -111,6 +111,13 @@
         The <code class="language-css">border-width</code> property can also be set individually with <code
           class="language-css">border-top-width</code>, <code class="language-css">border-right-width</code>, <code
           class="language-css">border-bottom-width</code>, and <code class="language-css">border-left-width</code>.</p>
+      <p>The same applies to the <code class="language-css">border-color</code> and <code
+          class="language-css">border-style</code>
+        with <code class="language-css">border-top-color</code>, <code class="language-css">border-right-color</code>, <code
+          class="language-css">border-bottom-color</code>, <code class="language-css">border-left-color</code> and <code
+          class="language-css">border-top-style</code>, <code class="language-css">border-right-style</code>, <code
+          class="language-css">border-bottom-style</code>, <code class="language-css">border-left-style</code>.
+      </p>
 
     </div>
   </main>
