--- a/lab_038.html
+++ b/lab_038.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 38 - Display
+    Lab 38 - Page Layouts
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -38,12 +38,12 @@
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
         <em>Lab 38</em>
-        Display
+        Page Layouts
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about diffeent display types in CSS</li>
+        <li>Learn about the different CSS page layouts</li>
       </ul>
 
 
