--- a/lab_037.html
+++ b/lab_037.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 37 - Shorthand Properties
+    Lab 37 - Display
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -38,12 +38,12 @@
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
         <em>Lab 37</em>
-        Shorthand Properties
+        Display
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn the shorthand for specific CSS properties</li>
+        <li>Learn about different display types in CSS</li>
       </ul>
 
 
