--- a/lab_039.html
+++ b/lab_039.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 39 - Page Layout
+    Lab 39 - Flexbox
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -38,12 +38,12 @@
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
         <em>Lab 39</em>
-        Page Layout
+        Flexbox
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about the different CSS paeg layouts</li>
+        <li>Learn about the Flexbox layout</li>
       </ul>
 
 
