feat: change wording

--- a/lab_01.html
+++ b/lab_01.html
@@ -79,7 +79,7 @@
         Pack if you put in the effort.
       </p>
       <p>
-        You have one week from when you start the Starter Pack to complete it. If you are unable to complete it in that
+        You have one week from when you receive the Starter Pack to complete it. If you are unable to complete it in that
         time, let us know sooner rather than later and we can work something out. Remember to schedule an interview as
         well! There's a link on the home page of the Starter Pack.
       </p>
