fix: grammar issues

--- a/lab_01.html
+++ b/lab_01.html
@@ -88,6 +88,7 @@
         get something out of the process. You can ask for help by posting on GitHub Discussions or messaging one of
         the Hack4Impact Engineering members.
       </p>
+      <p>Help others! If you see someone asking a question you know the answer to, give them some help.</p>
       <h2>
         Tips & Tricks
       </h2>
