--- a/lab_029.html
+++ b/lab_029.html
@@ -51,7 +51,7 @@
         visual appearance of a website. You might see some websites and developers using tools which mix HTML and CSS,
         however we <em>strongly</em> recommend that you keep them separate.
       </p>
-      <p>Remember, HTML is for content and CSS if for appearance. They both have their jobs and its your job as a
+      <p>Remember, HTML is for content and CSS is for appearance. They both have their jobs and its your job as a
         developer to use them properly! With that said, let's learn about how to apply CSS to HTML.</p>
       <h2>Applying CSS</h2>
       <p>There are three ways to apply CSS to HTML: <strong>inline</strong>, <strong>internal</strong>, and
