--- a/lab_033.html
+++ b/lab_033.html
@@ -55,7 +55,7 @@
       <pre data-range="1, 7" data-src="prism/css/3301.css"></pre>
       <p>The second HTML paragraph selector is last so it will take precedence. The text color will be blue.</p>
       <h2>The More Specific, the Better</h2>
-      <p>Okay, not really...<em>but</em> in CSS when there are conflicting style rules, the winner
+      <p>Okay, not really... <em>but</em> in CSS when there are conflicting style rules, the winner
         is decided by <strong>specificity</strong>. You are unlikely to have a situation where you select the same
         element twice,
         however conflicts with <em>nested elements</em> are more likely to occur:</p>
@@ -67,8 +67,8 @@
       </p>
       <h2>Calculating Specificity</h2>
       <p>A quick and easy way to calculate specificity is to assign different selectors, different values.
-        Give every <strong>ID selector</strong> a value of <strong>100</strong>. Ever <strong>class selector</strong>
-        a value of <strong>10</strong>. And every <strong>element selector</strong> a value of <strong>1</strong>.
+        Give every <strong>ID selector</strong> a value of <strong>100</strong>, every <strong>class selector</strong>
+        a value of <strong>10</strong>, and every <strong>element selector</strong> a value of <strong>1</strong>.
       </p>
       <ul>
         <li><code class="language-css">p</code> would have a value of 1</li>
