feat: updated style sheets and labs

--- a/lab_031.html
+++ b/lab_031.html
@@ -74,6 +74,11 @@
           elements</strong> such as <code class="language-html">&lt;input&gt;</code> or <code
           class="language-html">&lt;textarea&gt;</code>, however they can also be used on links for increased
         accessibility! Some visitors may be using a keyboard to navigate the website.</p>
+      <h2>Review CSS</h2>
+      <p>Take a look at the full CSS style sheet from Lab 29 and see if you can identify the different selectors
+        and pseudo classes. Is there anything that you don't understand yet?</p>
+      <p>How about the minimum style sheet? What is missing and what is the same? Take note of your observations and move
+        on to the next labs.</p>
 
     </div>
   </main>
