--- a/lab_034.html
+++ b/lab_034.html
@@ -111,8 +111,12 @@
         values: <code>capitalize</code>, <code>lowercase</code>, <code>uppercase</code>, and  <code>none</code>.</li>
 <li><code class="language-css">text-align</code> will align text within it's parent container. It can take the following
         values: <code>left</code>, <code>right</code>, <code>center</code>, and  <code>justify</code>.</li>
-
       </ul>
+      <h2>Apply Some CSS</h2>
+      <p>Using the minimum style sheet, apply some styling to the colors and text on your website! If you don't know where 
+        to start, find inspiration from other websites or start with an idea of what you would like.</p>
+      <p>Try to use each of the property once to understand how they work. If you are stuck or would like help achieving a certain style,
+        head over to <a href="https://github.com/hack4impact-calpoly/starter-pack/discussions" target="_blank" rel="noopener">GitHub Discussions</a>!</p>
 
 
     </div>
