feat: add new labs

--- a/lab_035.html
+++ b/lab_035.html
@@ -76,8 +76,15 @@
         lay on the webpage.</p>
 
       <h2>Margins and Padding</h2>
-      All edges of the margin and the padding can be set all together or individually. For example:</p>
+        <p>All edges of the margin and the padding can be set all together or individually. For example:</p>
       <pre data-range="1, 15" data-src="prism/css/3501.css"></pre>
+      <p>If you go into your browser, right-click and select <strong>Inspect</strong> you will get the developer tool
+        for analyzing and inspecting webpages in real time. Selecting the different HTML elements in the code, will highlight
+        their box model for you to see.</p>
+      <p>You can see the margins, padding, and borders that each HTML element has.</p>
+      <video class="video" controls>
+        <source src="assets/3501.mp4" type="video/mp4">
+      </video>
       <h2>Borders</h2>
       <p>Borders have a few more properties that control them. The simplest way to construct a border
         is to set a <code class="language-css">border-style</code>. The values it can be are:
