--- a/lab_036.html
+++ b/lab_036.html
@@ -69,6 +69,17 @@
           class="language-css">border-bottom</code>, and <code class="language-css">border-left</code>.</p>
       <p>Here's a few examples of the shorthand:</p>
       <pre data-range="12,25" data-src="prism/css/3601.css"></pre>
+      <h2>More CSS</h2>
+      <p>Use the <code class="language-css">margin</code>, <code class="language-css">padding</code>, and <code
+          class="language-css">border</code>
+        properties to add some style to your website. Put space between elements or set them up to be properly laid out
+        in the next lab.</p>
+      <p>There are a lot of different properties we haven't covered that you could attempt to add to your page.
+        For example: <code class="language-css">border-radius</code>, <code class="language-css">box-shadow</code>, or
+        <code class="language-css">text-shadow</code>.
+        Take some time to explore them here: <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"
+          target="_blank" rel="noopener">https://developer.mozilla.org/en-US/docs/Web/CSS/Reference</a>
+      </p>
 
     </div>
   </main>
