--- a/lab_037.html
+++ b/lab_037.html
@@ -52,7 +52,8 @@
       <p>Most browsers have a default representation of each HTML element that consists of default font styles,
         margins, padding, and <strong>display types</strong>. However, just like you can change font styles, margins,
         and padding - you can change the display type to get the behavior and layout you want.</p>
-      <p>There are three display types we'll focus on: <strong>inline</strong>, <strong>block</strong>, and <strong>flex</strong>.
+      <p>There are three display types we'll focus on: <strong>inline</strong>, <strong>block</strong>, and
+        <strong>flex</strong>.
       </p>
       <p class="note"><strong>Note:</strong> You can also do <code class="language-css">display: none</code> which hides
         the element.</p>
@@ -91,11 +92,12 @@
       <p>For more information, this article can explain flexbox better than we ever could: <a
           href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank"
           rel="noopener">https://css-tricks.com/snippets/css/a-guide-to-flexbox/</a>.</p>
-      <h2>Apply Displays</h2>
-      <p>Take a look at the full style sheet to try and understand how the displays are being used. We make <em>liberal</em>
+      <h2>Applying Displays</h2>
+      <p>Take a look at the full style sheet to try and understand how the displays are being used. We make
+        <em>liberal</em>
         use of <code class="language-css">display: flex</code> in our styling. Afterwards, apply display types to your
-        website to give it the layout that you want!</p>
-
+        website to give it the layout that you want!
+      </p>
     </div>
   </main>
   <script src="js/ui.js" type="text/javascript"></script>
